Add list of projects, image and sentence.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
   </head>
   <body>
       <h1>Jenn Eugenio</h1>
+      <img src="imgs/paris.jpg" alt="">
         <h2>About Me</h2>
+          <p>Hello! Thank you for visiting my portfolio webpage. My name is Jenn and I wanted to share a little about myself.</p>
         <h2>Background</h2>
+          <p></p>
         <h2>Current Interests</h2>
+          <p></p>
         <h2>List of Projects</h2>
+          <ul>
+            <li><a href="https://github.com/jenneugenio/html-webpage">My first HTML webpage with Epicodue</a></li>
+            <li><a href="https://github.com/jenneugenio/favorite-things">My favorite things</a></li>
+            <li><a href="https://github.com/jenneugenio/hello-world">A project on "Hello World"</a></li>
+            <li><a href="https://github.com/jenneugenio/goodbyee">A project on "Goodbye"</a></li>
+            <li><a href="https://github.com/jenneugenio/private-island">A project on Private Island</a></li>
   </body>
 </html>
