Add description, grid system for projects, list for background and images for current interests.

--- a/index.html
+++ b/index.html
@@ -1,24 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<link href="css/styles.css" rel="stylesheet" type="text/css">
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <head>
-    <meta charset="utf-8">
     <title>Jenn's Portfolio</title>
   </head>
+<div class="container">
   <body>
       <h1>Jenn Eugenio</h1>
       <img src="imgs/paris.jpg" alt="">
         <h2>About Me</h2>
-          <p>Hello! Thank you for visiting my portfolio webpage. My name is Jenn and I wanted to share a little about myself.</p>
+          <p>Hello! Thank you for visiting my portfolio webpage. My name is Jenn and I wanted to share a little about myself. I am born and raised from West Seattle and went to Washington State University (Go Cougs!). I still reside in West Seattle and have two adorable baby dogs, Spark and Koda. When I'm not working (planning cool events for hackers globally) and when I'm not coding (new skill I'm trying to learn), I am <strong>very</strong> social and always seeing friends and family. I also pride myself on a clean and tidy house so when I'm not out being social, I am a homebody making sure the house is spick and span.</p>
         <h2>Background</h2>
-          <p></p>
-        <h2>Current Interests</h2>
-          <p></p>
-        <h2>List of Projects</h2>
+          <p>I won't list out my full resume but will share my background because it's not technical and non-traditional when you think of coders! As mentioned, I graduated from WSU with a  Hospitality Business Management Major. During college and after graduation, I held various hospitality roles listed below:</p>
           <ul>
-            <li><a href="https://github.com/jenneugenio/html-webpage">My first HTML webpage with Epicodue</a></li>
-            <li><a href="https://github.com/jenneugenio/favorite-things">My favorite things</a></li>
-            <li><a href="https://github.com/jenneugenio/hello-world">A project on "Hello World"</a></li>
-            <li><a href="https://github.com/jenneugenio/goodbyee">A project on "Goodbye"</a></li>
-            <li><a href="https://github.com/jenneugenio/private-island">A project on Private Island</a></li>
+            <li>Restaurant Manager</li>
+            <li>Sales Coordinator</li>
+            <li>Catering Coordinator</li>
+            <li>Sales Manager</li>
+            <li>Conference Services Manager</li>
+          </ul>
+          <p>I truly love hospitality because of the interaction you get with a diverse group of people but I was finding the long hours and stress to be draining. I still wanted to be in my field but for a different industry so when I found my current job, it was a perfect mix of both. I now work for a cybersecurity company planning Community Events around the world and engaging with security researchers.</p>
+        <h2>Current Interests</h2>
+          <p>Outside of event planning and my new found hobby of coding, I enjoy going out to eat and trying new restaurants, playing with my dogs and traveling (when the opportunity presents itself). I've shared a few pictures that portray these interests.</p>
+        <div class="container">
+           <div class="row">
+              <div class="col-md-4"><img src="imgs/food.jpg" alt="Picture of duck confit"></div>
+              <div class="col-md-4"><img src="imgs/dogs.jpg" alt="Picture of Spark and Koda"></div>
+              <div class="col-md-4"><img src="imgs/london.jpg" alt="Picture of Jenn in phone booth"></div>
+          </div>
+        </div>
+        <h2>List of Projects</h2>
+        <div class="container">
+            <div class="row">
+              <div class="col-md-3">My first HTML webpage with Epicodus</div>
+              <a href="https://github.com/jenneugenio/html-webpage">My first HTML webpage with Epicodus</a>
+              <div class="col-md-3">My favorite things</div>
+              <a href="https://github.com/jenneugenio/favorite-things">My favorite things</a>
+              <div class="col-md-3">A project on "Hello World"</div>
+              <a href="https://github.com/jenneugenio/hello-world">A project on "Hello World"</a>
+              <div class="col-md-3">A project on "Goodbye</div>
+              <a href="https://github.com/jenneugenio/goodbyee">A project on "Goodbye"</a>
+       </div>
+    </div>
   </body>
+</div>
 </html>
