--- a/index.html
+++ b/index.html
@@ -5,44 +5,79 @@
   <head>
     <title>Jenn's Portfolio</title>
   </head>
-<div class="container">
+<span class="container">
   <body>
+      <div class="jumbotron">
       <h1>Jenn Eugenio</h1>
-      <img src="imgs/paris.jpg" alt="">
+      </div>
+      <div class="img">
+      <img src="imgs/paris.jpg" alt="Picture of Jenn Eugenio">
+      </div>
+      <div class="bg-info">
         <h2>About Me</h2>
+      </div>
           <p>Hello! Thank you for visiting my portfolio webpage. My name is Jenn and I wanted to share a little about myself. I am born and raised from West Seattle and went to Washington State University (Go Cougs!). I still reside in West Seattle and have two adorable baby dogs, Spark and Koda. When I'm not working (planning cool events for hackers globally) and when I'm not coding (new skill I'm trying to learn), I am <strong>very</strong> social and always seeing friends and family. I also pride myself on a clean and tidy house so when I'm not out being social, I am a homebody making sure the house is spick and span.</p>
+        <div class="bg-info">
         <h2>Background</h2>
+        </div>
           <p>I won't list out my full resume but will share my background because it's not technical and non-traditional when you think of coders! As mentioned, I graduated from WSU with a  Hospitality Business Management Major. During college and after graduation, I held various hospitality roles listed below:</p>
+          <div class="list">
           <ul>
             <li>Restaurant Manager</li>
             <li>Sales Coordinator</li>
             <li>Catering Coordinator</li>
             <li>Sales Manager</li>
             <li>Conference Services Manager</li>
+          </div>
           </ul>
-          <p>I truly love hospitality because of the interaction you get with a diverse group of people but I was finding the long hours and stress to be draining. I still wanted to be in my field but for a different industry so when I found my current job, it was a perfect mix of both. I now work for a cybersecurity company planning Community Events around the world and engaging with security researchers.</p>
+          <p>I truly love hospitality because of the interaction you get with a diverse group of people but I was finding the long hours and stress to be draining. I still wanted to be in my field but for a different industry so when I found my current job, it was a perfect mix of both. I now work for a cybersecurity company planning Community Events around the world and engaging with security researchers. At this job, I was finding that I had a disconnect on the technical side so I decided to sign up for a workshop so I had a foundation and basic understanding technically. This is what led me to looking at coding bootcamps but what is keeping me is my curiousity. I never thought I'd enjoy coding and want to do more so when I found myself eager to learn, I enrolled in Epicodus.</p>
+        <div class="bg-info">
         <h2>Current Interests</h2>
-          <p>Outside of event planning and my new found hobby of coding, I enjoy going out to eat and trying new restaurants, playing with my dogs and traveling (when the opportunity presents itself). I've shared a few pictures that portray these interests.</p>
+        </div>
+          <p>Outside of event planning and my new found hobby of coding, I <em>really</em> enjoy going out to eat and trying new restaurants, playing with my dogs and traveling (when the opportunity presents itself). I've shared a few pictures that portray these interests.</p>
         <div class="container">
+          <div class="img">
            <div class="row">
-              <div class="col-md-4"><img src="imgs/food.jpg" alt="Picture of duck confit"></div>
-              <div class="col-md-4"><img src="imgs/dogs.jpg" alt="Picture of Spark and Koda"></div>
-              <div class="col-md-4"><img src="imgs/london.jpg" alt="Picture of Jenn in phone booth"></div>
+              <div class="col-md-4"><img src="imgs/food.jpg" alt="Picture of duck confit" width=300px
+              <br>
+              This is an image of duck confit I had in Paris which is a traditional French dish.</div>
+              <div class="col-md-4"><img src="imgs/dogs.jpg" alt="Picture of Spark and Koda" width=300px>
+              <br>
+              This is an image of my pups, Spark and Koda. We were camping in Mount Rainer when this was taken.
+              </div>
+              <div class="col-md-4"><img src="imgs/london.jpg" alt="Picture of Jenn in phone booth" width=300px>
+              <br>
+
+              </div>
+          </div>
           </div>
         </div>
+        <div class="bg-info">
         <h2>List of Projects</h2>
-        <div class="container">
-            <div class="row">
-              <div class="col-md-3">My first HTML webpage with Epicodus</div>
+        </div>
+        <ol>
+        <div class="list">
+              <li>
               <a href="https://github.com/jenneugenio/html-webpage">My first HTML webpage with Epicodus</a>
-              <div class="col-md-3">My favorite things</div>
+              <br>
+              This project was an assignment on creating an HTML webpage which introduced the basic elemtns of HTML.
+              </li>
+              <li>
               <a href="https://github.com/jenneugenio/favorite-things">My favorite things</a>
-              <div class="col-md-3">A project on "Hello World"</div>
+              <br>
+              This project was an assignment on my favorite things.
+              </li>
+              <li>
               <a href="https://github.com/jenneugenio/hello-world">A project on "Hello World"</a>
-              <div class="col-md-3">A project on "Goodbye</div>
+              <br>
+              This project was an assignment on
+              </li>
+              <li>
               <a href="https://github.com/jenneugenio/goodbyee">A project on "Goodbye"</a>
+              <br>
+              </li>
+          </ol>
        </div>
-    </div>
   </body>
-</div>
+</span>
 </html>
