Create README.md and add one last Bootstrap CSS element to make each section its own color.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
       <div class="img">
       <img src="imgs/paris.jpg" alt="Picture of Jenn Eugenio">
       </div>
-      <div class="section">
-        <h2>About Me</h2>
+      <div class="alert alert-primary" role="alert">
+      <h2>About Me</h2>
           <p>Hello! Thank you for visiting my portfolio webpage. My name is Jenn and I wanted to share a little about myself. I am born and raised from West Seattle and went to Washington State University (Go Cougs!). I still reside in West Seattle and have two adorable baby dogs, Spark and Koda. When I'm not working (planning cool events for hackers globally) and when I'm not coding (new skill I'm trying to learn), I am <strong>very</strong> social and always seeing friends and family. I also pride myself on a clean and tidy house so when I'm not out being social, I am a homebody making sure the house is spick and span.</p>
-        </div>
       </div>
-      <div class="section">
+      <div class="alert alert-success" role="alert">
         <h2>Background</h2>
           <p>I won't list out my full resume but will share my background because it's not technical and non-traditional when you think of coders! As mentioned, I graduated from WSU with a  Hospitality Business Management Major. During college and after graduation, I held various hospitality roles listed below:</p>
           <div class="list">
@@ -32,7 +31,7 @@
           </ul>
           <p>I truly love hospitality because of the interaction you get with a diverse group of people but I was finding the long hours and stress to be draining. I still wanted to be in my field but for a different industry so when I found my current job, it was a perfect mix of both. I now work for a cybersecurity company planning Community Events around the world and engaging with security researchers. At this job, I was finding that I had a disconnect on the technical side so I decided to sign up for a workshop so I had a foundation and basic understanding technically. This is what led me to looking at coding bootcamps but what is keeping me is my curiousity. I never thought I'd enjoy coding and want to do more so when I found myself eager to learn, I enrolled in Epicodus.</p>
         </div>
-        <div class="section">
+        <div class="alert alert-danger" role="alert">
         <h2>Current Interests</h2>
           <p>Outside of event planning and my new found hobby of coding, I <strong>really</strong> enjoy going out to eat and trying new restaurants, playing with my dogs and traveling (when the opportunity presents itself). I've shared a few pictures that portray these interests.</p>
         <div class="container">
@@ -51,7 +50,7 @@
           </div>
         </div>
         </div>
-        <div class="section">
+        <div class="alert alert-warning" role="alert">
         <h2>List of Projects</h2>
         <div class="bg-warning">
         <h6><em>Please note, I am still a beginner so these projects are not yet robust with lots of code. I will update as I start to work on more projects!</em></h6>
